Fix jumbotron picture overflow and padding issue

--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,8 @@ nav {
   transition: background-color 200ms linear;
 }
 
+/* jumbotron */
+
 .jumbotron {
   border-radius: 50px;
   padding: 60px;
@@ -178,7 +180,15 @@ nav {
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0.05)
   );
+  overflow: hidden;
   background-color: #f0f8ff;
+}
+
+@media (max-width: 576px){
+  .jumbotron {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
 }
 
 .rounded-50 {
